vendor/utf8proc-sys/src/generated.rs

#[repr(transparent)]
#[doc = " Unicode categories."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct utf8proc_category_t(pub ::std::os::raw::c_uint);
impl utf8proc_bidi_class_t {
    #[doc = "< Left-to-Right"]
    pub const UTF8PROC_BIDI_CLASS_L: utf8proc_bidi_class_t = utf8proc_bidi_class_t(1);
    #[doc = "< Left-to-Right Embedding"]
    pub const UTF8PROC_BIDI_CLASS_LRE: utf8proc_bidi_class_t = utf8proc_bidi_class_t(2);
    #[doc = "< Left-to-Right Override"]
    pub const UTF8PROC_BIDI_CLASS_LRO: utf8proc_bidi_class_t = utf8proc_bidi_class_t(3);
    #[doc = "< Right-to-Left"]
    pub const UTF8PROC_BIDI_CLASS_R: utf8proc_bidi_class_t = utf8proc_bidi_class_t(4);
    #[doc = "< Right-to-Left Arabic"]
    pub const UTF8PROC_BIDI_CLASS_AL: utf8proc_bidi_class_t = utf8proc_bidi_class_t(5);
    #[doc = "< Right-to-Left Embedding"]
    pub const UTF8PROC_BIDI_CLASS_RLE: utf8proc_bidi_class_t = utf8proc_bidi_class_t(6);
    #[doc = "< Right-to-Left Override"]
    pub const UTF8PROC_BIDI_CLASS_RLO: utf8proc_bidi_class_t = utf8proc_bidi_class_t(7);
    #[doc = "< Pop Directional Format"]
    pub const UTF8PROC_BIDI_CLASS_PDF: utf8proc_bidi_class_t = utf8proc_bidi_class_t(8);
    #[doc = "< European Number"]
    pub const UTF8PROC_BIDI_CLASS_EN: utf8proc_bidi_class_t = utf8proc_bidi_class_t(9);
    #[doc = "< European Separator"]
    pub const UTF8PROC_BIDI_CLASS_ES: utf8proc_bidi_class_t = utf8proc_bidi_class_t(10);
    #[doc = "< European Number Terminator"]
    pub const UTF8PROC_BIDI_CLASS_ET: utf8proc_bidi_class_t = utf8proc_bidi_class_t(11);
    #[doc = "< Arabic Number"]
    pub const UTF8PROC_BIDI_CLASS_AN: utf8proc_bidi_class_t = utf8proc_bidi_class_t(12);
    #[doc = "< Common Number Separator"]
    pub const UTF8PROC_BIDI_CLASS_CS: utf8proc_bidi_class_t = utf8proc_bidi_class_t(13);
    #[doc = "< Nonspacing Mark"]
    pub const UTF8PROC_BIDI_CLASS_NSM: utf8proc_bidi_class_t = utf8proc_bidi_class_t(14);
    #[doc = "< Boundary Neutral"]
    pub const UTF8PROC_BIDI_CLASS_BN: utf8proc_bidi_class_t = utf8proc_bidi_class_t(15);
    #[doc = "< Paragraph Separator"]
    pub const UTF8PROC_BIDI_CLASS_B: utf8proc_bidi_class_t = utf8proc_bidi_class_t(16);
    #[doc = "< Segment Separator"]
    pub const UTF8PROC_BIDI_CLASS_S: utf8proc_bidi_class_t = utf8proc_bidi_class_t(17);
    #[doc = "< Whitespace"]
    pub const UTF8PROC_BIDI_CLASS_WS: utf8proc_bidi_class_t = utf8proc_bidi_class_t(18);
    #[doc = "< Other Neutrals"]
    pub const UTF8PROC_BIDI_CLASS_ON: utf8proc_bidi_class_t = utf8proc_bidi_class_t(19);
    #[doc = "< Left-to-Right Isolate"]
    pub const UTF8PROC_BIDI_CLASS_LRI: utf8proc_bidi_class_t = utf8proc_bidi_class_t(20);
    #[doc = "< Right-to-Left Isolate"]
    pub const UTF8PROC_BIDI_CLASS_RLI: utf8proc_bidi_class_t = utf8proc_bidi_class_t(21);
    #[doc = "< First Strong Isolate"]
    pub const UTF8PROC_BIDI_CLASS_FSI: utf8proc_bidi_class_t = utf8proc_bidi_class_t(22);
    #[doc = "< Pop Directional Isolate"]
    pub const UTF8PROC_BIDI_CLASS_PDI: utf8proc_bidi_class_t = utf8proc_bidi_class_t(23);
}
#[repr(transparent)]
#[doc = " Bidirectional character classes."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct utf8proc_bidi_class_t(pub ::std::os::raw::c_uint);
impl utf8proc_decomp_type_t {
    #[doc = "< Font"]
    pub const UTF8PROC_DECOMP_TYPE_FONT: utf8proc_decomp_type_t = utf8proc_decomp_type_t(1);
    #[doc = "< Nobreak"]
    pub const UTF8PROC_DECOMP_TYPE_NOBREAK: utf8proc_decomp_type_t = utf8proc_decomp_type_t(2);
    #[doc = "< Initial"]
    pub const UTF8PROC_DECOMP_TYPE_INITIAL: utf8proc_decomp_type_t = utf8proc_decomp_type_t(3);
    #[doc = "< Medial"]
    pub const UTF8PROC_DECOMP_TYPE_MEDIAL: utf8proc_decomp_type_t = utf8proc_decomp_type_t(4);
    #[doc = "< Final"]
    pub const UTF8PROC_DECOMP_TYPE_FINAL: utf8proc_decomp_type_t = utf8proc_decomp_type_t(5);
    #[doc = "< Isolated"]
    pub const UTF8PROC_DECOMP_TYPE_ISOLATED: utf8proc_decomp_type_t = utf8proc_decomp_type_t(6);
    #[doc = "< Circle"]
    pub const UTF8PROC_DECOMP_TYPE_CIRCLE: utf8proc_decomp_type_t = utf8proc_decomp_type_t(7);
    #[doc = "< Super"]
    pub const UTF8PROC_DECOMP_TYPE_SUPER: utf8proc_decomp_type_t = utf8proc_decomp_type_t(8);
    #[doc = "< Sub"]
    pub const UTF8PROC_DECOMP_TYPE_SUB: utf8proc_decomp_type_t = utf8proc_decomp_type_t(9);
    #[doc = "< Vertical"]
    pub const UTF8PROC_DECOMP_TYPE_VERTICAL: utf8proc_decomp_type_t = utf8proc_decomp_type_t(10);
    #[doc = "< Wide"]
    pub const UTF8PROC_DECOMP_TYPE_WIDE: utf8proc_decomp_type_t = utf8proc_decomp_type_t(11);
    #[doc = "< Narrow"]
    pub const UTF8PROC_DECOMP_TYPE_NARROW: utf8proc_decomp_type_t = utf8proc_decomp_type_t(12);
    #[doc = "< Small"]
    pub const UTF8PROC_DECOMP_TYPE_SMALL: utf8proc_decomp_type_t = utf8proc_decomp_type_t(13);
    #[doc = "< Square"]
    pub const UTF8PROC_DECOMP_TYPE_SQUARE: utf8proc_decomp_type_t = utf8proc_decomp_type_t(14);
    #[doc = "< Fraction"]
    pub const UTF8PROC_DECOMP_TYPE_FRACTION: utf8proc_decomp_type_t = utf8proc_decomp_type_t(15);
    #[doc = "< Compat"]
    pub const UTF8PROC_DECOMP_TYPE_COMPAT: utf8proc_decomp_type_t = utf8proc_decomp_type_t(16);
}
#[repr(transparent)]
#[doc = " Decomposition type."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct utf8proc_decomp_type_t(pub ::std::os::raw::c_uint);
impl utf8proc_boundclass_t {
    #[doc = "< Start"]
    pub const UTF8PROC_BOUNDCLASS_START: utf8proc_boundclass_t = utf8proc_boundclass_t(0);
    #[doc = "< Other"]
    pub const UTF8PROC_BOUNDCLASS_OTHER: utf8proc_boundclass_t = utf8proc_boundclass_t(1);
    #[doc = "< Cr"]
    pub const UTF8PROC_BOUNDCLASS_CR: utf8proc_boundclass_t = utf8proc_boundclass_t(2);
    #[doc = "< Lf"]
    pub const UTF8PROC_BOUNDCLASS_LF: utf8proc_boundclass_t = utf8proc_boundclass_t(3);
    #[doc = "< Control"]
    pub const UTF8PROC_BOUNDCLASS_CONTROL: utf8proc_boundclass_t = utf8proc_boundclass_t(4);
    #[doc = "< Extend"]
    pub const UTF8PROC_BOUNDCLASS_EXTEND: utf8proc_boundclass_t = utf8proc_boundclass_t(5);
    #[doc = "< L"]
    pub const UTF8PROC_BOUNDCLASS_L: utf8proc_boundclass_t = utf8proc_boundclass_t(6);
    #[doc = "< V"]
    pub const UTF8PROC_BOUNDCLASS_V: utf8proc_boundclass_t = utf8proc_boundclass_t(7);
    #[doc = "< T"]
    pub const UTF8PROC_BOUNDCLASS_T: utf8proc_boundclass_t = utf8proc_boundclass_t(8);
    #[doc = "< Lv"]
    pub const UTF8PROC_BOUNDCLASS_LV: utf8proc_boundclass_t = utf8proc_boundclass_t(9);
    #[doc = "< Lvt"]
    pub const UTF8PROC_BOUNDCLASS_LVT: utf8proc_boundclass_t = utf8proc_boundclass_t(10);
    #[doc = "< Regional indicator"]
    pub const UTF8PROC_BOUNDCLASS_REGIONAL_INDICATOR: utf8proc_boundclass_t = utf8proc_boundclass_t(11);
    #[doc = "< Spacingmark"]
    pub const UTF8PROC_BOUNDCLASS_SPACINGMARK: utf8proc_boundclass_t = utf8proc_boundclass_t(12);
    #[doc = "< Prepend"]
    pub const UTF8PROC_BOUNDCLASS_PREPEND: utf8proc_boundclass_t = utf8proc_boundclass_t(13);
    #[doc = "< Zero Width Joiner"]
    pub const UTF8PROC_BOUNDCLASS_ZWJ: utf8proc_boundclass_t = utf8proc_boundclass_t(14);
    #[doc = "< Emoji Base"]
    pub const UTF8PROC_BOUNDCLASS_E_BASE: utf8proc_boundclass_t = utf8proc_boundclass_t(15);
    #[doc = "< Emoji Modifier"]
    pub const UTF8PROC_BOUNDCLASS_E_MODIFIER: utf8proc_boundclass_t = utf8proc_boundclass_t(16);
    #[doc = "< Glue_After_ZWJ"]
    pub const UTF8PROC_BOUNDCLASS_GLUE_AFTER_ZWJ: utf8proc_boundclass_t = utf8proc_boundclass_t(17);
    #[doc = "< E_BASE + GLUE_AFTER_ZJW"]
    pub const UTF8PROC_BOUNDCLASS_E_BASE_GAZ: utf8proc_boundclass_t = utf8proc_boundclass_t(18);
    pub const UTF8PROC_BOUNDCLASS_EXTENDED_PICTOGRAPHIC: utf8proc_boundclass_t = utf8proc_boundclass_t(19);
    pub const UTF8PROC_BOUNDCLASS_E_ZWG: utf8proc_boundclass_t = utf8proc_boundclass_t(20);
}
#[repr(transparent)]
#[doc = " Boundclass property. (TR29)"]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct utf8proc_boundclass_t(pub ::std::os::raw::c_uint);
impl utf8proc_indic_conjunct_break_t {
    pub const UTF8PROC_INDIC_CONJUNCT_BREAK_NONE: utf8proc_indic_conjunct_break_t = utf8proc_indic_conjunct_break_t(0);
    pub const UTF8PROC_INDIC_CONJUNCT_BREAK_LINKER: utf8proc_indic_conjunct_break_t =
        utf8proc_indic_conjunct_break_t(1);
    pub const UTF8PROC_INDIC_CONJUNCT_BREAK_CONSONANT: utf8proc_indic_conjunct_break_t =
        utf8proc_indic_conjunct_break_t(2);
    pub const UTF8PROC_INDIC_CONJUNCT_BREAK_EXTEND: utf8proc_indic_conjunct_break_t =
        utf8proc_indic_conjunct_break_t(3);
}
#[repr(transparent)]
#[doc = " Indic_Conjunct_Break property. (TR44)"]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct utf8proc_indic_conjunct_break_t(pub ::std::os::raw::c_uint);
#[doc = " Function pointer type passed to utf8proc_map_custom() and\n utf8proc_decompose_custom(), which is used to specify a user-defined\n mapping of codepoints to be applied in conjunction with other mappings."]
pub type utf8proc_custom_func = ::std::option::Option<
    unsafe extern "C" fn(codepoint: utf8proc_int32_t, data: *mut ::std::os::raw::c_void) -> utf8proc_int32_t,
>;
unsafe extern "C" {
    #[doc = " Array containing the byte lengths of a UTF-8 encoded codepoint based\n on the first byte."]
    pub static utf8proc_utf8class: [utf8proc_int8_t; 256usize];
}
unsafe extern "C" {
    #[doc = " Returns the utf8proc API version as a string MAJOR.MINOR.PATCH\n (http://semver.org format), possibly with a \"-dev\" suffix for\n development versions."]
    pub fn utf8proc_version() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " Returns the utf8proc supported Unicode version as a string MAJOR.MINOR.PATCH."]
    pub fn utf8proc_unicode_version() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " Returns an informative error string for the given utf8proc error code\n (e.g. the error codes returned by utf8proc_map())."]
    pub fn utf8proc_errmsg(errcode: utf8proc_ssize_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " Reads a single codepoint from the UTF-8 sequence being pointed to by `str`.\n The maximum number of bytes read is `strlen`, unless `strlen` is\n negative (in which case up to 4 bytes are read).\n\n If a valid codepoint could be read, it is stored in the variable\n pointed to by `codepoint_ref`, otherwise that variable will be set to -1.\n In case of success, the number of bytes read is returned; otherwise, a\n negative error code is returned."]
    pub fn utf8proc_iterate(
        str_: *const utf8proc_uint8_t,
        strlen: utf8proc_ssize_t,
        codepoint_ref: *mut utf8proc_int32_t,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " Check if a codepoint is valid (regardless of whether it has been\n assigned a value by the current Unicode standard).\n\n @return 1 if the given `codepoint` is valid and otherwise return 0."]
    pub fn utf8proc_codepoint_valid(codepoint: utf8proc_int32_t) -> utf8proc_bool;
}
unsafe extern "C" {
    #[doc = " Encodes the codepoint as an UTF-8 string in the byte array pointed\n to by `dst`. This array must be at least 4 bytes long.\n\n In case of success the number of bytes written is returned, and\n otherwise 0 is returned.\n\n This function does not check whether `codepoint` is valid Unicode."]
    pub fn utf8proc_encode_char(codepoint: utf8proc_int32_t, dst: *mut utf8proc_uint8_t) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " Look up the properties for a given codepoint.\n\n @param codepoint The Unicode codepoint.\n\n @returns\n A pointer to a (constant) struct containing information about\n the codepoint.\n @par\n If the codepoint is unassigned or invalid, a pointer to a special struct is\n returned in which `category` is 0 (@ref UTF8PROC_CATEGORY_CN)."]
    pub fn utf8proc_get_property(codepoint: utf8proc_int32_t) -> *const utf8proc_property_t;
}
